--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "AdityaPlayer",
-    "logo": "https://te.legra.ph/file/2e2ddeb33674ba956148f.jpg",
+    "name": "BHATAKTI_ATMA",
+    "logo": "https://telegra.ph/file/aee355efd6fff9f05f1ad.jpg",
     "description": "An Advanced Premium Music Bot For Telegram Groups VC.",
     "keywords": ["music", "voice chat", "telegram"],
     "repository": "https://github.com/itsadityaxd/adityaplayer",
